--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,33 +4,35 @@
         <h2 class="border border-dark border-rounded rounded-pill px-5">Current Cart</h2>
     </div>
     <div class="col-6 d-flex-col justify-content-center align-items-center mx-auto">
-        <button class="btn btn-outline-success col-12 mb-3">Order</button>
+        <button class="btn btn-outline-success col-12 mb-3" routerLink="/orders">Order</button>
         <table class="table table-bordered border-dark col-12 shadow mx-auto">
             <tr class="">
                 <td colspan="7" class="p-2">Total Items</td>
-                <td colspan="5" class="fw-bold text-dark">5</td>
+                <td colspan="5" class="fw-bold text-dark">{{cart.cartItems.length}}</td>
             </tr>
             <tr>
                 <td colspan="7" class="p-2">Total Price</td>
-                <td colspan="5" class="fw-bold text-danger">10,000</td>
+                <td colspan="5" class="fw-bold text-danger">{{UserPaymentInfo.montoTotal}}</td>
             </tr>
             <tr>
                 <td colspan="7" class="p-2">Shipping Charges</td>
-                <td colspan="5" class="fw-bold text-danger">1,000</td>
+                <td colspan="5" class="fw-bold text-danger">{{UserPaymentInfo.costoEnvio}}</td>
             </tr>
             <tr>
                 <td colspan="7" class="p-2">Discount</td>
-                <td colspan="5" class="fw-bold text-success">200</td>
+                <td colspan="5" class="fw-bold text-success">{{UserPaymentInfo.montoDescuento}}</td>
             </tr>
             <tr>
                 <td colspan="7" class="p-2">You have to pay</td>
-                <td colspan="5" class="fw-bold text-success">10,800</td>
+                <td colspan="5" class="fw-bold text-success">{{UserPaymentInfo.precioPagar}}</td>
             </tr>
         </table>
     </div>
     <!-- Cart items -->
     <div class="">
-        <h2 class="ms-5">Cart Items</h2>
+        <div class="d-flex justify-content-center col-3 my-3">
+            <h2 class="ms-5 border border-dark border-rounded rounded-pill px-5">Cart Items</h2>
+        </div>
         <div class="row col-8 d-flex justify-content-center mx-auto g-5">
             <div class="col-6 w-5" *ngFor="let item of cart.cartItems">
                 <!-- es item.producto porque la api me manda con ese nombre -->
@@ -40,18 +42,20 @@
     </div>
     <!-- PrevCartItems -->
     <div class="">
-        <h2 class="ms-5">Prev Carts</h2>
-        <div *ngFor="let item of [1,1,1]">
+        <div class="d-flex justify-content-center col-3 my-5">
+            <h2 class="ms-5 border border-dark border-rounded rounded-pill px-5">Prev Carts</h2>
+        </div>
+        <div *ngFor="let prod of cartPrevious">
             <div class="card col-8 d-flex mx-auto my-4">
                 <div class="card-header d-flex justify-content-between">
-                    <h5 class="fw-bold">Ordered On: <span >{{"26 May 2022"|date:"dd-MMM-yyyy"}}</span></h5>
-                    <h5 class="fw-bold">Items:5</h5>
-                    <h5 class="fw-bold">Items:10,000</h5>
+                    <h5 class="fw-bold">Ordered On: <span >{{prod.orderedon|date:"dd-MMM-yyyy"}}</span></h5>
+                    <h5 class="fw-bold">Items:{{prod.cartItems.length}}</h5>
+                    <h5 class="fw-bold">Precio Pagado: {{_utilityService.calularPrecioPagado(prod)}}</h5>
                 </div>
                       
                 <div class="card-body d-flex gap-4">
-                    <div *ngFor="let item of [1,1,1,1,1]">
-                        <app-product [view]="'prevcartitem'"></app-product>
+                    <div class="col-2 px-2" *ngFor="let item of prod.cartItems">
+                        <app-product [view]="'prevcartitem'" [product]="item.producto"></app-product>
                     </div>
                 </div>
             </div>
