--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -69,7 +69,10 @@
             </tr>
             
         </table>
-        <div class="mb-4">
+        <div>
+            <button class="btn-primary" (click)="generapdf()">Imprimir orden</button>
+        </div>
+        <div class="mb-4 mt-2 text-center">
             <button class="btn-outline-success" (click)="realizarOrden()">Pagar</button>
         
         <div *ngIf="spinner" class="spinner-border" role="status">
