--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,10 @@
 .home-banner button{
     position: absolute;
-    top:50%;
-    left:20%;
+    top:80%;
+    left:25%;
+}
+.banner{
+    
+    max-width: full;
+    height: 700px;
 }
