--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div *ngFor="let item of listproduct">
         <div class="home-banner position-relative" >
             <button type="button" class="btn btn-outline-light">Shop Now</button>
-            <img class="img-fluid w-100" src="../../assets/images/{{item.bannerimage}}" alt="">
+            <img class="img-fluid " src="../../assets/images/{{item.bannerimage}}" alt="">
         </div>
         <div class="home-product py-5">
             <app-lista-products  [categories]="item.categories"></app-lista-products>
